# pytest_dataguard

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
pytest_dataguard/: options.py  plugin.py
pytest_dataguard/tests/: data.txt  test_plugin.py
