[project]
name = "pytest-dataguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=25.2",
    "polars>=1.34.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[project.entry-points.pytest11]
dataguard = "pytest_dataguard.options"
